<resources>
    <string name="app_name">SurferCheater</string>

    <string name="placeholder">XXX</string>
    <string name="current_surf_title">Current Surf Height</string>
    <string name="action_settings">Settings</string>


    <!-- favorite spot dashboard card -->
    <string name="favorite_spot_card_title">Local Spot</string>
    <string name="favorite_spot_location_title">Spot:</string>
    <string name="favorite_spot_surf_height_title">Current Surf Height:</string>
    <string name="favorite_spot_high_tide_title">High Tide:</string>
    <string name="favorite_spot_low_tide_title">Low Tide:</string>
    <string name="favorite_spot_wind_info_title">Wind Direction/Speed:</string>

    <!-- forecasted spots -->
    <string name="forecast_spot_card_title">Forecasts</string>

    <string name="dashboard_nearby_spots">Nearby Forecasts</string>
    <string name="dashboard_all_spots">All Spots</string>

</resources>
