<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/textview_padding_vertical_normal"
        android:paddingEnd="@dimen/textview_padding_horizontal_normal"
        android:paddingStart="@dimen/textview_padding_horizontal_normal"
        android:paddingTop="@dimen/textview_padding_vertical_normal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/favorite_spot_location_title"
            android:textSize="@dimen/textview_font_size_small"/>

        <TextView
            android:id="@+id/tv_favorite_spot_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/placeholder"
            android:textSize="@dimen/textview_font_size_small"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/textview_padding_vertical_normal"
        android:paddingEnd="@dimen/textview_padding_horizontal_normal"
        android:paddingStart="@dimen/textview_padding_horizontal_normal"
        android:paddingTop="@dimen/textview_padding_vertical_normal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/favorite_spot_surf_height_title"
            android:textSize="@dimen/textview_font_size_small"/>

        <TextView
            android:id="@+id/tv_favorite_spot_surf_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/placeholder"
            android:textSize="@dimen/textview_font_size_small"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/textview_padding_vertical_normal"
        android:paddingEnd="@dimen/textview_padding_horizontal_normal"
        android:paddingStart="@dimen/textview_padding_horizontal_normal"
        android:paddingTop="@dimen/textview_padding_vertical_normal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/favorite_spot_high_tide_title"
            android:textSize="@dimen/textview_font_size_small"/>

        <TextView
            android:id="@+id/tv_favorite_spot_high_tide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/placeholder"
            android:textSize="@dimen/textview_font_size_small"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/textview_padding_vertical_normal"
        android:paddingEnd="@dimen/textview_padding_horizontal_normal"
        android:paddingStart="@dimen/textview_padding_horizontal_normal"
        android:paddingTop="@dimen/textview_padding_vertical_normal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/favorite_spot_low_tide_title"
            android:textSize="@dimen/textview_font_size_small"/>

        <TextView
            android:id="@+id/tv_favorite_spot_low_tide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/placeholder"
            android:textSize="@dimen/textview_font_size_small"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/textview_padding_vertical_large"
        android:paddingEnd="@dimen/textview_padding_horizontal_normal"
        android:paddingStart="@dimen/textview_padding_horizontal_normal"
        android:paddingTop="@dimen/textview_padding_vertical_normal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/favorite_spot_wind_info_title"
            android:textSize="@dimen/textview_font_size_small"/>

        <TextView
            android:id="@+id/tv_favorite_spot_wind_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/placeholder"
            android:textSize="@dimen/textview_font_size_small"/>
    </RelativeLayout>

</LinearLayout>